--- a/Server/Web/_Imports.razor
+++ b/Server/Web/_Imports.razor
@@ -2,4 +2,4 @@
 @using Microsoft.AspNetCore.Components.Routing
 @using Microsoft.AspNetCore.Components.Web
 @using MudBlazor
-@using BewasModSync.Web.Shared
+@using ModGod.Web.Shared
